reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_with_flatten_optional_and_required-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStructWithFlattenOptionalAndRequired"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStructWithFlattenOptionalAndRequired"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestStructRenameAll": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestStructRenameAll",
        "required": [
          "fieldName"
        ],
        "properties": {
          "fieldName": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "reflectapi_demo.tests.serde.TestStructWithFlattenNested": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestStructWithFlattenNested",
        "required": [
          "f"
        ],
        "properties": {
          "f": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "reflectapi_demo.tests.serde.TestStructWithFlattenOptionalAndRequired": {
        "allOf": [
          {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStructWithFlattenNested"
              }
            ]
          },
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStructRenameAll"
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.TestStructWithFlattenOptionalAndRequired",
            "properties": {}
          }
        ]
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
