reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_with_option_fields_without_serde_default-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_input_typescript_code :: < ARequest > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    input_test: (
      input: reflectapi_demo.tests.serde.ARequest,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface ARequest {
        reflect_option?: string | null | undefined;
        annotated_reflect_option?: string | null | undefined;
        std_option?: string | null;
        annotated_std_option?: string | null;
        custom_codec_option: string | null;
      }
    }
  }
}

namespace __implementation {

  function input_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.ARequest,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<reflectapi_demo.tests.serde.ARequest, {}, {}, {}>(
        client,
        "/input_test",
        input,
        headers,
        options,
      );
  }
}
