reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_with_option_fields_without_serde_default.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_input_schema :: < ARequest > ().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "enum",
      "name": "reflectapi::Option",
      "description": "Undefinable Option type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "representation": "none",
      "variants": [
        {
          "name": "Undefined",
          "description": "The value is missing, i.e. undefined in JavaScript",
          "fields": "none"
        },
        {
          "name": "None",
          "description": "The value is provided but set to none, i.e. null in JavaScript",
          "fields": "none"
        },
        {
          "name": "Some",
          "description": "The value is provided and set to some value",
          "fields": {
            "unnamed": [
              {
                "name": "0",
                "type": {
                  "name": "T"
                }
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::serde::ARequest",
      "fields": {
        "named": [
          {
            "name": "reflect_option",
            "type": {
              "name": "reflectapi::Option",
              "arguments": [
                {
                  "name": "std::string::String"
                }
              ]
            },
            "required": true
          },
          {
            "name": "annotated_reflect_option",
            "type": {
              "name": "reflectapi::Option",
              "arguments": [
                {
                  "name": "std::string::String"
                }
              ]
            }
          },
          {
            "name": "std_option",
            "type": {
              "name": "std::option::Option",
              "arguments": [
                {
                  "name": "std::string::String"
                }
              ]
            },
            "required": true
          },
          {
            "name": "annotated_std_option",
            "type": {
              "name": "std::option::Option",
              "arguments": [
                {
                  "name": "std::string::String"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "kind": "enum",
      "name": "std::option::Option",
      "description": "Optional nullable type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "representation": "none",
      "variants": [
        {
          "name": "None",
          "description": "The value is not provided, i.e. null",
          "fields": "none"
        },
        {
          "name": "Some",
          "description": "The value is provided and set to some value",
          "fields": {
            "unnamed": [
              {
                "name": "0",
                "type": {
                  "name": "T"
                }
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    }
  ]
}
